--- a/ansible/ansible_collections/doodler8888/arch_linux_setup/roles/general_packages_installation/defaults/main.yml
+++ b/ansible/ansible_collections/doodler8888/arch_linux_setup/roles/general_packages_installation/defaults/main.yml
@@ -1,2 +1,1 @@
----
-# defaults file for general_packages_installation
+# roles/your_role_name/defaults/main.yml or roles/your_role_name/vars/main.yml
