--- a/ansible/ansible_collections/doodler8888/arch_linux_setup/roles/general_packages_installation/vars/main.yml
+++ b/ansible/ansible_collections/doodler8888/arch_linux_setup/roles/general_packages_installation/vars/main.yml
@@ -1,2 +1,5 @@
----
-# vars file for general_packages_installation
+general_packages_installation_directories_to_link:
+  - zellij
+  - nvim
+  - alacritty
+  - hyprland
