--- a/ansible/ansible_collections/doodler8888/arch_linux_setup/roles/system_configuration/vars/main.yml
+++ b/ansible/ansible_collections/doodler8888/arch_linux_setup/roles/system_configuration/vars/main.yml
@@ -1,2 +1,9 @@
----
-# vars file for system_configuration
+system_configuration_rc_files:
+  - zsh/.zshrc
+  - bash/.bashrc
+  - bash/.inputrc
+
+system_configuration_rc_files2:
+  - .zshrc
+  - .bashrc
+  - .inputrc
