--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -13,7 +13,7 @@ env = XCURSOR_SIZE,24
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us,ru
-#    kb_variant = colemak
+    kb_variant = colemak,,
     kb_model =
     # kb_options = caps:swapescape
     kb_options = caps:swapescape, grp:ctrl_alt_toggle
