--- a/scripts/raku/test.toml
+++ b/scripts/raku/test.toml
@@ -13,6 +13,4 @@ log = "0.4"
 pretty_env_logger = "0.4"
 tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
 
-
-
-
+# something else
