--- a/scripts/haskell/scripts.cabal
+++ b/scripts/haskell/scripts.cabal
@@ -22,9 +22,11 @@ executable dependency-update
     -- other-modules:
     -- other-extensions:
     build-depends:    base >=4.18.1
-                    , turtle >=1.6.2
-		    , process
-		    , regex-posix
+                    , process
+                    , tomland
+                    , bytestring
+                    , text
+                    , regex-posix
     hs-source-dirs:   exe
     default-language: GHC2021
 
