--- a/scripts/raku/test.toml
+++ b/scripts/raku/test.toml
@@ -1,23 +1,19 @@
-[dependencies]
-log = "0.4.20"
-pretty_env_logger = "0.5.0"
-[dependencies.teloxide]
-features = [ "macros" ]
-version = "0.12.2"
-[dependencies.tokio]
-features = [ "rt-multi-thread", "macros" ]
-version = "1.36.0"
-[package]
-edition = "2021"
-name = "update_dependencies"
-version = "0.1.0"
-[profile.release]
-codegen-units = 1
-debug = false
-incremental = false
-lto = true
-opt-level = 3
-panic = "abort"
 [[bin]]
-name = "update_dependencies"
+name = "my_binary"
 path = "src/main.rs"
+
+[package]
+name = "shelf_bot"
+version = "0.1.0"
+edition = "2021"
+
+[dependencies]
+teloxide = { version = "0.12", features = ["macros"] }
+pretty_env_logger = "0.4"
+log = "0.4"
+tokio = { version = "1.9", features = ["rt-multi-thread", "macros"] }
+
+[features]
+default = ["feature1"]
+feature1 = []
+feature2 = ["dep1", "dep2"]
