--- a/scripts/raku/test.toml
+++ b/scripts/raku/test.toml
@@ -12,6 +12,7 @@ teloxide = { version = "0.12", features = ["macros"] }
 pretty_env_logger = "0.4"
 log = "0.4"
 tokio = { version = "1.9", features = ["rt-multi-thread", "macros"] }
+simple_logger = "1.1"
 
 [features]
 default = ["feature1"]
