--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -38,7 +38,7 @@ disabled = true
 
 [python]
 disabled = true
-# format = "via [🐍 $version( \($virtualenv\) )]($style) "
+# format = "[$version( \\($virtualenv\\) )]($style)"
 
 [nodejs]
 disabled = true
